name:                juno
version:             0.0.0.2
synopsis:            Bynzantine Fault Tolerant Raft
description:         An implementation of a Byzantine Fault Tolerant Raft protocol.
homepage:            https://github.com/buckie/juno
author:              Chris Copeland, Will Martino
maintainer:          chrisnc@cs.stanford.edu, wjmartino@gmail.com
copyright:           Copyright (C) 2014-2015 Chris Copeland, Copyright 2015-2016 (C) Will Martino

license:             BSD3
license-file:        LICENSE

category:            Network
build-type:          Simple
cabal-version:       >=1.20

source-repository head
  type:     git
  location: git@github.com:buckie/juno.git

library
  exposed-modules:     Apps.Juno.Server
                     , Apps.Juno.Command
                     , Apps.Juno.Client
                     , Apps.Juno.JsonTypes
                     , Apps.Juno.ApiDemoHandler
                     , Apps.Juno.ApiHandlers
                     , Apps.Juno.Ledger
                     , Apps.Juno.Parser
                     , Apps.Juno.Repl
                     , Juno.Consensus.Api
                     , Juno.Consensus.Handle
                     , Juno.Consensus.Server
                     , Juno.Consensus.Client
                     , Juno.Consensus.Commit
                     , Juno.Consensus.Handle.Types
                     , Juno.Consensus.Handle.AppendEntries
                     , Juno.Consensus.Handle.AppendEntriesResponse
                     , Juno.Consensus.Handle.Command
                     , Juno.Consensus.Handle.RequestVote
                     , Juno.Consensus.Handle.RequestVoteResponse
                     , Juno.Consensus.Handle.ElectionTimeout
                     , Juno.Consensus.Handle.HeartbeatTimeout
                     , Juno.Consensus.Handle.Revolution
                     , Juno.Hoplite.Eval
                     , Juno.Hoplite.Heap
                     , Juno.Hoplite.STExcept
                     , Juno.Hoplite.Term
                     , Juno.Hoplite.Transmatic
                     , Juno.Hoplite.Types
                     , Juno.Messaging.Types
                     , Juno.Messaging.ZMQ
                     , Juno.Monitoring.EkgJson
                     , Juno.Monitoring.EkgMonitor
                     , Juno.Monitoring.EkgSnap
                     , Juno.Monitoring.Server
                     , Juno.Persistence.SQLite
                     , Juno.Runtime.Api.ApiServer
                     , Juno.Runtime.MessageReceiver
                     , Juno.Runtime.Role
                     , Juno.Runtime.Sender
                     , Juno.Runtime.Timer
                     , Juno.Spec.Simple
                     , Juno.Types
                     , Juno.Types.Base
                     , Juno.Types.Command
                     , Juno.Types.Config
                     , Juno.Types.Event
                     , Juno.Types.Log
                     , Juno.Types.Message
                     , Juno.Types.Message.Signed
                     , Juno.Types.Message.CMD
                     , Juno.Types.Message.CMDR
                     , Juno.Types.Message.AE
                     , Juno.Types.Message.AER
                     , Juno.Types.Message.RV
                     , Juno.Types.Message.RVR
                     , Juno.Types.Message.REV
                     , Juno.Types.Metric
                     , Juno.Types.Spec
                     , Juno.Util.Combinator
                     , Juno.Util.Util
                     , Schwifty.Swift.M105.Types
                     , Schwifty.Swift.M105.Parser
  build-depends:       SHA2
                     , aeson
                     , aeson-pretty
                     , ansi-wl-pprint
                     , array
                     , async
                     , attoparsec
                     , base < 5
                     , base16-bytestring
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , bound
                     , bytestring
                     , cereal >= 0.4.1.1
                     , containers
                     , criterion
                     , crypto-api
                     , deepseq >= 1.4.1.1
                     , ed25519-donna
                     , ekg >= 0.4 && < 0.5
                     , ekg-core >= 0.1.1.0 && < 0.2
                     , ekg-json
                     , enclosed-exceptions
                     , filepath
                     , ghc-prim
                     , hspec
                     , lens
                     , lifted-base
                     , megaparsec >= 4.2.0 && < 4.3
                     , monad-control
                     , monad-loops
                     , mtl
                     , mtl-compat
                     , network
                     , parallel
                     , parsers
                     , prelude-extras
                     , primitive
                     , random
                     , snap-core
                     , snap-core-cors
                     , snap-server
                     , sqlite-simple
                     , stm
                     , text >= 1.2.0.0 && < 1.3
                     , thyme
                     , time
                     , transformers
                     , trifecta
                     , unagi-chan
                     , unordered-containers
                     , vector >= 0.11.0.0
                     , vector-space >= 0.10.2 && < 0.11
                     , wreq
                     , yaml
                     , zeromq4-haskell >= 0.6.3
                     , zlib
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2 -with-rtsopts="-N4"
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable genconfs
  main-is:             GenerateConfigFiles.hs
  build-depends:       base < 5
                     , containers
                     , crypto-api
                     , directory
                     , ed25519-donna
                     , filepath
                     , juno
                     , network
                     , thyme
                     , yaml
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable junoserver
  main-is:             JunoServer.hs
  build-depends:       base < 5
                     , juno
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable junoclient
  main-is:             JunoClient.hs
  build-depends:       base < 5
                     , juno
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable junorepl
  main-is:             JunoRepl.hs
  build-depends:       base < 5
                     , juno
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable simplepartest
  main-is:             SimpleSeqVsParVsAsync.hs
  build-depends:       async
                     , base < 5
                     , bytestring
                     , criterion
                     , deepseq >= 1.4.1.1
                     , ed25519-donna
                     , parallel
  hs-source-dirs:      criterion
  ghc-options:         -Wall -threaded -eventlog -rtsopts -O2 +RTS -N4 -RTS
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable serialization
  main-is:             Serialization.hs
  build-depends:       async
                     , base < 5
                     , bytestring
                     , cereal
                     , containers
                     , criterion
                     , deepseq >= 1.4.1.1
                     , ed25519-donna
                     , juno
                     , parallel
  hs-source-dirs:      criterion
  ghc-options:         -Wall -threaded -rtsopts -O2
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

test-suite hspec
  other-modules:       ParserSpec
                     , WireFormatSpec
                     , JsonTypesSpec
  type: exitcode-stdio-1.0
  main-is: hspec.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
                    base
                , SHA2
                , aeson
                , bytestring
                , containers
                , hspec
                , juno
                , text >= 1.2.0.0 && < 1.3
