name:                tangaroa
version:             0.0.0.1
synopsis:            Bynzantine Fault Tolerant Raft
description:         An implementation of a Byzantine Fault Tolerant Raft protocol.
--homepage:            TODO

author:              Chris Copeland
copyright:           (c) 2014, Chris Copeland

license:             BSD3
license-file:        LICENSE

category:            Network
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Network.Tangaroa
                     , Network.Tangaroa.Client
                     , Network.Tangaroa.Combinator
                     , Network.Tangaroa.Handler
                     , Network.Tangaroa.Role
                     , Network.Tangaroa.Sender
                     , Network.Tangaroa.Spec.Simple
                     , Network.Tangaroa.Timer
                     , Network.Tangaroa.Types
                     , Network.Tangaroa.Util
  build-depends:       base < 5
                     , binary
                     , bytestring
                     , containers
                     , crypto-api
                     , lens
                     , lifted-base
                     , monad-control
                     , mtl
                     , network
                     , random
                     , stm
                     , RSA
                     , transformers
                     , unagi-chan
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable simpleserver
  main-is:             Server.hs
  build-depends:       base < 5
                     , stm
                     , tangaroa
  hs-source-dirs:      bin/Simple
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable simpleclient
  main-is:             Client.hs
  build-depends:       base < 5
                     , tangaroa
  hs-source-dirs:      bin/Simple
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010


executable udprecv
  main-is:             udprecv.hs
  build-depends:       base < 5
                     , bytestring
                     , network
  hs-source-dirs:      bin
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable udpsend
  main-is:             udpsend.hs
  build-depends:       base < 5
                     , bytestring
                     , network
  hs-source-dirs:      bin
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
