name:                tangaroa
version:             0.0.0.1
synopsis:            Bynzantine Fault Tolerant Raft
description:         An implementation of a Byzantine Fault Tolerant Raft protocol.
--homepage:            TODO

author:              Chris Copeland
copyright:           (c) 2014, Chris Copeland

license:             BSD3
license-file:        LICENSE

category:            Network
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Network.Tangaroa.Client
                     , Network.Tangaroa.Combinator
                     , Network.Tangaroa.Handler
                     , Network.Tangaroa.Role
                     , Network.Tangaroa.Sender
                     , Network.Tangaroa.Server
                     , Network.Tangaroa.Spec.Simple
                     , Network.Tangaroa.Timer
                     , Network.Tangaroa.Types
                     , Network.Tangaroa.Util
                     , Network.Tangaroa.Byzantine.Client
                     , Network.Tangaroa.Byzantine.Handler
                     , Network.Tangaroa.Byzantine.Role
                     , Network.Tangaroa.Byzantine.Sender
                     , Network.Tangaroa.Byzantine.Server
                     , Network.Tangaroa.Byzantine.Spec.Simple
                     , Network.Tangaroa.Byzantine.Timer
                     , Network.Tangaroa.Byzantine.Types
                     , Network.Tangaroa.Byzantine.Util
  build-depends:       base < 5
                     , binary
                     , bytestring
                     , containers
                     , crypto-api
                     , lens
                     , lifted-base
                     , monad-control
                     , mtl
                     , network
                     , random
                     , stm
                     , RSA
                     , transformers
                     , unagi-chan
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable simpleserver
  main-is:             Server.hs
  build-depends:       base < 5
                     , containers
                     , tangaroa
  hs-source-dirs:      bin/Simple
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010

executable simpleclient
  main-is:             Client.hs
  build-depends:       base < 5
                     , tangaroa
  hs-source-dirs:      bin/Simple
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010

executable bftserver
  main-is:             Server.hs
  build-depends:       base < 5
                     , containers
                     , tangaroa
                     , binary
  hs-source-dirs:      bin/Byzantine
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010

executable bftclient
  main-is:             Client.hs
  build-depends:       base < 5
                     , tangaroa
                     , binary
  hs-source-dirs:      bin/Byzantine
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010

executable genkeys
  main-is:             GenerateKeys.hs
  build-depends:       base < 5
                     , RSA
                     , containers
                     , crypto-api
                     , network
                     , directory
                     , filepath
  hs-source-dirs:      bin
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010

executable udprecv
  main-is:             udprecv.hs
  build-depends:       base < 5
                     , bytestring
                     , network
  hs-source-dirs:      bin
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010

executable udpsend
  main-is:             udpsend.hs
  build-depends:       base < 5
                     , bytestring
                     , network
  hs-source-dirs:      bin
  ghc-options:         -Wall -O2 -threaded -rtsopts
  default-language:    Haskell2010
